more style cleanup

--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="app-header-right">
-          <button id="resetBtn" class="icon-btn icon-btn--reset" onclick="resetGame()" style="display: none" title="Reset Game">
+          <button id="resetBtn" class="icon-btn icon-btn-reset" onclick="resetGame()" style="display: none" title="Reset Game">
             <span class="icon-symbol" aria-hidden="true">↺</span>
           </button>
           <button id="cancelBtn" class="icon-btn" onclick="cancelGame()" style="display: none" title="Cancel Game">❌</button>
