adjust size of rem. add disable/enable of diff checkbox in all journal viewers

--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -151,7 +151,7 @@
             <div class="journal-navigation journal-viewer-content">
               <button id="journalUpBtn" class="nav-btn" onclick="navigateJournal('up')" title="Previous Entry" disabled>▲</button>
               <button id="journalDownBtn" class="nav-btn" onclick="navigateJournal('down')" title="Next Entry" disabled>▼</button>
-              <label class="diff-checkbox-label"> <input type="checkbox" id="showDiffCheckbox" onchange="toggleDiff()" /> Show diff </label>
+              <label class="diff-checkbox-label"> <input type="checkbox" id="showDiffCheckbox" onchange="toggleDiff()" disabled /> Show diff </label>
             </div>
           </div>
         </section>
