--- a/src/main/resources/static-resources/playbook.html
+++ b/src/main/resources/static-resources/playbook.html
@@ -62,7 +62,7 @@
 
         <section class="app-panel journal-detail-panel">
           <div class="journal-panel-header">
-            <h2 class="journal-panel-title">Agent Playbook Journal</h2>
+            <h2 class="app-panel-title">Agent Playbook Journal</h2>
           </div>
 
           <div class="app-panel-body journal-detail-body">
