combine game id with header to save vertical space

--- a/src/main/resources/static-resources/leader-board.html
+++ b/src/main/resources/static-resources/leader-board.html
@@ -81,7 +81,7 @@
 
         <section class="app-panel details-panel" aria-labelledby="gameDetailsTitle">
           <div class="app-panel-header">
-            <h2 id="gameDetailsTitle" class="app-panel-title">Game Details</h2>
+            <h2 id="gameDetailsTitle" class="app-panel-title">Game: <span id="gameDetailsId">-</span></h2>
           </div>
           <div class="app-panel-body details-body">
             <div class="game-info" id="gameInfo"></div>
