add square popup to leader board

--- a/src/main/resources/static-resources/leader-board.html
+++ b/src/main/resources/static-resources/leader-board.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/common.css" />
     <link rel="stylesheet" href="/css/common-new.css" />
     <link rel="stylesheet" href="/css/leader-board.css" />
+    <link rel="stylesheet" href="/css/square-popup.css" />
   </head>
   <body>
     <div class="app-shell">
@@ -104,5 +105,6 @@
     <script src="/js/common.js"></script>
     <script src="/js/common-new.js"></script>
     <script src="/js/leader-board.js"></script>
+    <script src="/js/square-popup.js"></script>
   </body>
 </html>
