add square popup to live game board

--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/common-new.css" />
     <link rel="stylesheet" href="/css/index.css" />
     <link rel="stylesheet" href="/css/journal-viewer.css" />
+    <link rel="stylesheet" href="/css/square-popup.css" />
   </head>
   <body>
     <div class="app-shell">
@@ -221,5 +222,6 @@
     <script src="/js/index.js"></script>
     <script src="/js/journal-viewer.js"></script>
     <script src="/js/diff.js"></script>
+    <script src="/js/square-popup.js"></script>
   </body>
 </html>
