add game action log requests

--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -27,6 +27,7 @@
                 <div class="dd-item" onclick="window.location.href='/playbook.html'">Playbook Viewer</div>
                 <div class="dd-item" onclick="window.location.href='/agent-role.html'">Agent Role Viewer</div>
                 <div class="dd-item" onclick="window.location.href='/leader-board.html'">Leader Board</div>
+                <div class="dd-item" onclick="window.location.href='/game-action-log.html'">Game Action Logs</div>
                 <div class="dd-item" onclick="window.location.href='/help.html'">Help</div>
               </div>
             </div>
