--- a/src/main/resources/static-resources/agent-role.html
+++ b/src/main/resources/static-resources/agent-role.html
@@ -25,6 +25,7 @@
                 <div class="dd-item" onclick="window.location.href='/playbook.html'">Playbook Viewer</div>
                 <div class="dd-item current">Agent Role Viewer</div>
                 <div class="dd-item" onclick="window.location.href='/leader-board.html'">Leader Board</div>
+                <div class="dd-item" onclick="window.location.href='/game-action-log.html'">Game Action Logs</div>
                 <div class="dd-item" onclick="window.location.href='/help.html'">Help</div>
               </div>
             </div>
