fix and adjust logger

--- a/src/main/resources/static-resources/game-action-log.html
+++ b/src/main/resources/static-resources/game-action-log.html
@@ -49,13 +49,12 @@
             <table class="game-list-table">
               <thead>
                 <tr>
-                  <th scope="col">Game</th>
                   <th scope="col">Started</th>
                 </tr>
               </thead>
               <tbody id="recentGamesBody">
                 <tr class="game-list-empty-row">
-                  <td colspan="2">Loading recent games…</td>
+                  <td>Loading recent games…</td>
                 </tr>
               </tbody>
             </table>
