update nav tips to game action log

--- a/src/main/resources/static-resources/help.html
+++ b/src/main/resources/static-resources/help.html
@@ -225,6 +225,7 @@
               <li>The page automatically selects the top-ranked player and their most recent game when first loaded.</li>
               <li>Use the hamburger menu to navigate between the Game, Playbook Viewer, Agent Role Viewer, Leader Board, and Help pages.</li>
               <li>Click on any row in the rankings or game history tables to view detailed information.</li>
+              <li>Clicking a game’s created date or status opens the Game Action Logs page pre-filtered to that match, letting you inspect the precise sequence of game actions log messages.</li>
               <li>The selected player and game are highlighted for easy reference.</li>
             </ul>
           </section>
@@ -237,8 +238,12 @@
             </p>
             <h3>Page Layout</h3>
             <ul>
-              <li><strong>Recent Games:</strong> Lists the latest matches. Select a row to load its log stream. The refresh button keeps the list up to date while preserving your current selection.</li>
-              <li><strong>Action Stream:</strong> Shows paginated log entries for the chosen game with timestamps, player identifiers, action types, and short summaries so you can quickly skim activity.</li>
+              <li>
+                <strong>Recent Games:</strong> Lists the latest matches. Select a row to load its log stream. The refresh button keeps the list up to date while preserving your current selection.
+              </li>
+              <li>
+                <strong>Action Stream:</strong> Shows paginated log entries for the chosen game with timestamps, player identifiers, action types, and short summaries so you can quickly skim activity.
+              </li>
               <li><strong>Log Detail:</strong> Displays the full text of the selected entry in a scrollable, fixed-width panel, making prompts, tool payloads, or diagnostic messages easy to read.</li>
             </ul>
             <h3>Usage Tips</h3>
