--- a/src/main/resources/static-resources/game-action-log.html
+++ b/src/main/resources/static-resources/game-action-log.html
@@ -50,11 +50,13 @@
               <thead>
                 <tr>
                   <th scope="col">Started</th>
+                  <th scope="col" aria-label="Player 1"></th>
+                  <th scope="col" aria-label="Player 2"></th>
                 </tr>
               </thead>
               <tbody id="recentGamesBody">
                 <tr class="game-list-empty-row">
-                  <td>Loading recent games…</td>
+                  <td colspan="3">Loading recent games…</td>
                 </tr>
               </tbody>
             </table>
@@ -76,6 +78,7 @@
                 <tr>
                   <th scope="col">Time</th>
                   <th scope="col">Player</th>
+                  <th scope="col" aria-label="Leader Board link"></th>
                   <th scope="col">Type</th>
                   <th scope="col">Summary</th>
                 </tr>
