--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -109,7 +109,7 @@
                   <div id="p1Timer" class="stat-value">0s</div>
                 </div>
               </div>
-              <button id="p1JournalBtn" class="btn-primary journal-btn" onclick="openJournalViewer('p1')" style="display: none">View Journal</button>
+              <button id="p1JournalBtn" class="btn-primary journal-btn" onclick="openJournalViewer('p1')" style="display: none">View Playbook</button>
             </div>
           </div>
         </aside>
@@ -211,7 +211,7 @@
                   <div id="p2Timer" class="stat-value">0s</div>
                 </div>
               </div>
-              <button id="p2JournalBtn" class="btn-primary journal-btn" onclick="openJournalViewer('p2')" style="display: none">View Journal</button>
+              <button id="p2JournalBtn" class="btn-primary journal-btn" onclick="openJournalViewer('p2')" style="display: none">View Playbook</button>
             </div>
           </div>
         </aside>
